app/static/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap');

html, body {
    margin: 0;
    padding: 0;
    min-width: 100%;
    min-height: 100%;
    font-family: 'Roboto Condensed', sans-serif;
    display: flex;
}

body {
    background-color: #dee2ff;
    display: flex;
    flex: 1 1 auto;
    flex-direction: column;
    align-items: stretch;
}

br {
    display: none;
}

.container, .containers {
    background-color: #abc4ff;
    padding: 20px;
    font-size: 20px;
}

.container {
    flex: 1 1 auto;
}

p {
    font-weight: 300;
}

h1, h2 {
    font-weight: 700;
}

a {
    color: #501785;
}

.title {
    font-size: 50px;
}

.text {
    border: 3px dashed grey;
    font-size: 90%;
}

div.text {
    width: 80%;
    padding: 0.25em 1em;
    margin: 1em 0;
}

.error-msg {
    background-color: #e4c1f9;
    border-color: #000000;
    border-style: ridge;
    border-width: 3px;
    border-radius: 5px;
    padding: 3px;
    font-weight: bold;
    width: calc(100% - 12px);
}

span.required {
    color: #7b2cbf;
}

nav a, nav p {
    float: left;
    margin: 0 10px 0 0;
    display: flex;
    text-decoration: underline;
}

nav {
    width: 100%;
    display: flex;
    margin: 10px 0;
}

fieldset {
    margin: 10px 0;
    border: 3px solid grey;
}

fieldset legend {
    background-color: grey;
    padding: 3px;
}

fieldset > p:first-of-type {
    padding: 3px;
    text-decoration: underline;
}

fieldset .text {
    padding: 0;
    border: none;
    border-top: 3px dotted grey;
    width: 100%;
}

fieldset a {
    color: white;
}

/************** HEADER  *****************/

/* Overall Header */
#header {
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: stretch;
    background-color: #03045e;
    height: 50px;
    width: 100%;
    position: sticky;
    font-size: 20px;
    top: 0;
    z-index: 999999999;
}

/* Split into left/right/center but still overall */
#header div {
    align-self: center;
    flex-grow: 1;
    display: flex;
}

/* All the links */
#header a {
    display: block;
    color: white;
    padding: 13px 10px;
    align-self: center;
}

/* Hover over link */
#header a:hover {
    background-color: #023e8a;
}

/* Title is not a link */
#header p {
    display: block;
    color: white;
    padding: 10px 10px;
    align-self: center;
    justify-content: flex-start;
}

#header #left {
    float: left;
    flex-grow: 1;
}

/* Search form */
#header #center {
    flex-grow: 8;
    text-align: center;
}

/* Entire search form */
#header form {
    width: 100%;
    display: flex;
}

/* Placeholder text inside search bar */
#header input {
    font-size: 20px;
    float: left;
}

/* User input in search bar */
#header #keywords {
    flex: 100 0 auto;
    margin-right: 5px;
}

/* Search button */
#header #search {
    flex: 1 0 auto;
    font-weight: 700;
}

/* Logout button */
#header #right {
    float: right;
    text-align: right;
    justify-content: flex-end;
    padding-right: 5px;
}

/************** HOME  *****************/

body > #home {
    display: flex;
    flex: 1 1 auto;
    flex-direction: column;
}

body > #home .container {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    max-width: 1500px;
    margin-top: 20px;
    margin-bottom: 20px;
}

table {
    border-collapse: collapse;
    font-size: 20px;
    width: 100%;
    text-align: center;
}

thead, th {
    background-color: #02033a;
    color: white;
    font-weight: 300;
}

tr{
    border-top: 1px solid black;
}

tr:nth-child(odd) {
    background-color: #cdd2f8;
    color: black;
}

tr:nth-child(even) {
    background-color: #f7defd;
    color: black;
}

table input {
    background-color: #ffffff;
}


/* || Input Fields */

input::placeholder {
    font-family: 'Roboto Condensed', sans-serif;
}

input, textarea {
    font-family: inherit;
    font-size: inherit;
    border-style: solid;
    border-color: grey;
    outline-color: grey;
    outline-width: 3px;
    border-width: 3px;
    transition-duration: 0.5s;
    transition-property: border-color, outline-color;
    transition-timing-function: linear;
}

input:focus, textarea:focus {
    outline-color: white;
}

input:valid, textarea:valid {
    outline-color: green;
}

input:invalid, textarea:invalid {
    outline-color: red;
}


input[type="submit"] {
    transition-property: filter;
    transition-duration: 0.2s;
    filter: brightness(100%);
    cursor: pointer;
}

input[type="submit"]:hover {
    filter: brightness(90%);
}

/************** LOGIN  *****************/
.login {
    background-image: url("https://64.media.tumblr.com/61aab7c9150371daf454d9c7d45b7c35/tumblr_obclnoe4iA1vc76nvo1_1280.jpg");
    background-repeat: no-repeat;
    background-position: right bottom;
    background-size: cover;
    margin: 0;
    padding: 0;
}

#login {
    display: flex;
    flex-direction: column;
    flex: 1 1 auto;
    padding: 0;
    margin: 0;
}

#login .container {
    width: clamp(400px, 33%, 600px);
    border-right: 6px solid #7b2cbf;
    font-size: 20px;
    background-color: #abc4ffb4;
    height: 100%;
    margin: 0;
    padding-top: 10px;
}

#login input, #login textarea, .loginForm input, .loginForm textarea {
    font-size: 20px;
    margin-bottom: 25px;
    margin-top: 5px;
    display: block;
    width: 80%;
}

#login input[type="submit"], .loginForm input[type="submit"] {
    width: 50%;
}

#login small, .loginForm small {
    color: #555555;
}

#login label, .loginForm label {
    width: 100%;
    display: block;
}

#login label[for="submit"], .loginForm label[for="submit"] {
    opacity: 0;
}

#login textarea, .loginForm textarea {
    width: 80%;
    min-height: 90px;
}

#login #link, .loginForm #link {
    font-size: 100%;
    margin-top: -20px;
}

.loginForm details {
    margin-top: -10px;
}

/************** BLOG  *****************/
body > #bloghome {
    /* display: flex;
    flex: 1 1 auto; */
    display: block;
}

body > #bloghome .containers {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    max-width: 1500px;
    margin-top: 20px;
    margin-bottom: 20px;
}

body > #bloghome .entries {
    background: transparent;
    width: calc(80%);
    margin: -20px auto;
    margin-left: auto;
    margin-right: auto;
    border-left: 50px solid #abc4ff;
    z-index: 0;
    transform: translateX(25px);
}

body > #bloghome .entries .containers {
    z-index: 0;
    transform: translateX(-25px);
}

@media (max-width: 800px) {
    #header {
        height: auto;
        flex-direction: column;
    }
    .container, .containers {
        width: auto !important;
        display: block !important;
        margin-left: 0 !important;
        margin-right: 0 !important;
        transform: none !important;
    }
    .entries {
        width: auto !important;
        margin: 0 !important;
        padding: 0 !important;
        border: none !important;
        transform: none !important;
    }

}

